--- a/Text Editor Proj.vcxproj
+++ b/Text Editor Proj.vcxproj
@@ -134,7 +134,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>fltk_editor.cpp -o editor -lfltk -lXext -lX11 -lm %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>fltk_editor.cpp -o text-editor.exe -lfltk -lXext -lX11 -lm %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
